main/d96/parser/.antlr/D96Parser.py
# Generated from g:\sem_212\ppl\assignment1\src\main\d96\parser\D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'Break'", "'Continue'", "'If'", "'Elseif'", 
                     "'Else'", "'Foreach'", "'True'", "'False'", "'Array'", 
                     "'In'", "'Int'", "'Float'", "'Boolean'", "'String'", 
                     "'Return'", "'Null'", "'Class'", "'Val'", "'Var'", 
                     "'Constructor'", "'Destructor'", "'New'", "'By'", "'Self'", 
                     "';'", "':'", "','", "'.'", "'..'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'!'", "'&&'", "'||'", "'=='", "'='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'==.'", "'+.'", "'::'" ]

    symbolicNames = [ "<INVALID>", "INTLIT", "FLOATLIT", "BOOLLIT", "STRLIT", 
                      "BREAK_", "CONTINUE_", "IF_", "ELSEIF_", "ELSE_", 
                      "FOREACH_", "TRUE_", "FALSE_", "ARRAY_", "IN_", "INT_", 
                      "FLOAT_", "BOOL_", "STR_", "RETURN_", "NULL_", "CLASS_", 
                      "VAL_", "VAR_", "CONSTRUCTOR_", "DESTRUCTOR_", "NEW_", 
                      "BY_", "SELF_", "SEMI", "COLON", "COMMA", "DOT", "DOUBLEDOT", 
                      "LB", "RB", "LSB", "RSB", "LCB", "RCB", "ADDOP", "SUBOP", 
                      "MULOP", "DIVOP", "MODOP", "NOTOP", "ANDOP", "OROP", 
                      "EQCMP", "ASNOP", "DIFCMP", "LESCMP", "LEQCMP", "GRECMP", 
                      "GEQCMP", "SEQCMP", "SADDOP", "CSMEM", "ID", "VID", 
                      "COMMENT", "WS", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_classDecl = 1
    RULE_classMem = 2
    RULE_attribute = 3
    RULE_method = 4
    RULE_normalMet = 5
    RULE_constructor = 6
    RULE_destructor = 7
    RULE_paraList = 8
    RULE_idList = 9
    RULE_scope = 10
    RULE_stmt = 11
    RULE_declare = 12
    RULE_declBody = 13
    RULE_notvalBody = 14
    RULE_identifier = 15
    RULE_asnStmt = 16
    RULE_lhs = 17
    RULE_ifStmt = 18
    RULE_forStmt = 19
    RULE_scopeLoop = 20
    RULE_stmtLoop = 21
    RULE_ifStmtLoop = 22
    RULE_breakStmt = 23
    RULE_contStmt = 24
    RULE_callMethod = 25
    RULE_retStmt = 26
    RULE_expr = 27
    RULE_exprList = 28
    RULE_arrDec = 29
    RULE_vartype = 30
    RULE_arrLit = 31

    ruleNames =  [ "program", "classDecl", "classMem", "attribute", "method", 
                   "normalMet", "constructor", "destructor", "paraList", 
                   "idList", "scope", "stmt", "declare", "declBody", "notvalBody", 
                   "identifier", "asnStmt", "lhs", "ifStmt", "forStmt", 
                   "scopeLoop", "stmtLoop", "ifStmtLoop", "breakStmt", "contStmt", 
                   "callMethod", "retStmt", "expr", "exprList", "arrDec", 
                   "vartype", "arrLit" ]

    EOF = Token.EOF
    INTLIT=1
    FLOATLIT=2
    BOOLLIT=3
    STRLIT=4
    BREAK_=5
    CONTINUE_=6
    IF_=7
    ELSEIF_=8
    ELSE_=9
    FOREACH_=10
    TRUE_=11
    FALSE_=12
    ARRAY_=13
    IN_=14
    INT_=15
    FLOAT_=16
    BOOL_=17
    STR_=18
    RETURN_=19
    NULL_=20
    CLASS_=21
    VAL_=22
    VAR_=23
    CONSTRUCTOR_=24
    DESTRUCTOR_=25
    NEW_=26
    BY_=27
    SELF_=28
    SEMI=29
    COLON=30
    COMMA=31
    DOT=32
    DOUBLEDOT=33
    LB=34
    RB=35
    LSB=36
    RSB=37
    LCB=38
    RCB=39
    ADDOP=40
    SUBOP=41
    MULOP=42
    DIVOP=43
    MODOP=44
    NOTOP=45
    ANDOP=46
    OROP=47
    EQCMP=48
    ASNOP=49
    DIFCMP=50
    LESCMP=51
    LEQCMP=52
    GRECMP=53
    GEQCMP=54
    SEQCMP=55
    SADDOP=56
    CSMEM=57
    ID=58
    VID=59
    COMMENT=60
    WS=61
    ERROR_CHAR=62
    UNCLOSE_STRING=63
    ILLEGAL_ESCAPE=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def classDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ClassDeclContext)
            else:
                return self.getTypedRuleContext(D96Parser.ClassDeclContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.CLASS_:
                self.state = 64
                self.classDecl()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS_(self):
            return self.getToken(D96Parser.CLASS_, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def LCB(self):
            return self.getToken(D96Parser.LCB, 0)

        def RCB(self):
            return self.getToken(D96Parser.RCB, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def classMem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ClassMemContext)
            else:
                return self.getTypedRuleContext(D96Parser.ClassMemContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_classDecl




    def classDecl(self):

        localctx = D96Parser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(D96Parser.CLASS_)
            self.state = 73
            self.match(D96Parser.ID)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 74
                self.match(D96Parser.COLON)
                self.state = 75
                self.match(D96Parser.ID)


            self.state = 78
            self.match(D96Parser.LCB)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.VAL_) | (1 << D96Parser.VAR_) | (1 << D96Parser.CONSTRUCTOR_) | (1 << D96Parser.DESTRUCTOR_) | (1 << D96Parser.ID) | (1 << D96Parser.VID))) != 0):
                self.state = 79
                self.classMem()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 85
            self.match(D96Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassMemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self):
            return self.getTypedRuleContext(D96Parser.AttributeContext,0)


        def method(self):
            return self.getTypedRuleContext(D96Parser.MethodContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_classMem




    def classMem(self):

        localctx = D96Parser.ClassMemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classMem)
        try:
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL_, D96Parser.VAR_]:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.attribute()
                pass
            elif token in [D96Parser.CONSTRUCTOR_, D96Parser.DESTRUCTOR_, D96Parser.ID, D96Parser.VID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.method()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declare(self):
            return self.getTypedRuleContext(D96Parser.DeclareContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attribute




    def attribute(self):

        localctx = D96Parser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attribute)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.declare()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def normalMet(self):
            return self.getTypedRuleContext(D96Parser.NormalMetContext,0)


        def constructor(self):
            return self.getTypedRuleContext(D96Parser.ConstructorContext,0)


        def destructor(self):
            return self.getTypedRuleContext(D96Parser.DestructorContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_method




    def method(self):

        localctx = D96Parser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_method)
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ID, D96Parser.VID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.normalMet()
                pass
            elif token in [D96Parser.CONSTRUCTOR_]:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.constructor()
                pass
            elif token in [D96Parser.DESTRUCTOR_]:
                self.enterOuterAlt(localctx, 3)
                self.state = 95
                self.destructor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NormalMetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def scope(self):
            return self.getTypedRuleContext(D96Parser.ScopeContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def VID(self):
            return self.getToken(D96Parser.VID, 0)

        def paraList(self):
            return self.getTypedRuleContext(D96Parser.ParaListContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_normalMet




    def normalMet(self):

        localctx = D96Parser.NormalMetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_normalMet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            _la = self._input.LA(1)
            if not(_la==D96Parser.ID or _la==D96Parser.VID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 99
            self.match(D96Parser.LB)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ID or _la==D96Parser.VID:
                self.state = 100
                self.paraList()


            self.state = 103
            self.match(D96Parser.RB)
            self.state = 104
            self.scope()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTRUCTOR_(self):
            return self.getToken(D96Parser.CONSTRUCTOR_, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def scope(self):
            return self.getTypedRuleContext(D96Parser.ScopeContext,0)


        def paraList(self):
            return self.getTypedRuleContext(D96Parser.ParaListContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_constructor




    def constructor(self):

        localctx = D96Parser.ConstructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_constructor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(D96Parser.CONSTRUCTOR_)
            self.state = 107
            self.match(D96Parser.LB)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ID or _la==D96Parser.VID:
                self.state = 108
                self.paraList()


            self.state = 111
            self.match(D96Parser.RB)
            self.state = 112
            self.scope()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DestructorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DESTRUCTOR_(self):
            return self.getToken(D96Parser.DESTRUCTOR_, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def scope(self):
            return self.getTypedRuleContext(D96Parser.ScopeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_destructor




    def destructor(self):

        localctx = D96Parser.DestructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_destructor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(D96Parser.DESTRUCTOR_)
            self.state = 115
            self.match(D96Parser.LB)
            self.state = 116
            self.match(D96Parser.RB)
            self.state = 117
            self.scope()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.IdListContext)
            else:
                return self.getTypedRuleContext(D96Parser.IdListContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.SEMI)
            else:
                return self.getToken(D96Parser.SEMI, i)

        def getRuleIndex(self):
            return D96Parser.RULE_paraList




    def paraList(self):

        localctx = D96Parser.ParaListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paraList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.idList()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.SEMI:
                self.state = 120
                self.match(D96Parser.SEMI)
                self.state = 121
                self.idList()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(D96Parser.IdentifierContext,i)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def vartype(self):
            return self.getTypedRuleContext(D96Parser.VartypeContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def getRuleIndex(self):
            return D96Parser.RULE_idList




    def idList(self):

        localctx = D96Parser.IdListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_idList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.identifier()
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.COMMA:
                self.state = 128
                self.match(D96Parser.COMMA)
                self.state = 129
                self.identifier()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self.match(D96Parser.COLON)
            self.state = 136
            self.vartype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScopeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(D96Parser.LCB, 0)

        def RCB(self):
            return self.getToken(D96Parser.RCB, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.StmtContext)
            else:
                return self.getTypedRuleContext(D96Parser.StmtContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_scope




    def scope(self):

        localctx = D96Parser.ScopeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_scope)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(D96Parser.LCB)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.INTLIT) | (1 << D96Parser.FLOATLIT) | (1 << D96Parser.BOOLLIT) | (1 << D96Parser.STRLIT) | (1 << D96Parser.IF_) | (1 << D96Parser.FOREACH_) | (1 << D96Parser.ARRAY_) | (1 << D96Parser.RETURN_) | (1 << D96Parser.NULL_) | (1 << D96Parser.VAL_) | (1 << D96Parser.VAR_) | (1 << D96Parser.NEW_) | (1 << D96Parser.SELF_) | (1 << D96Parser.LB) | (1 << D96Parser.LCB) | (1 << D96Parser.SUBOP) | (1 << D96Parser.NOTOP) | (1 << D96Parser.ID) | (1 << D96Parser.VID))) != 0):
                self.state = 139
                self.stmt()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 145
            self.match(D96Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declare(self):
            return self.getTypedRuleContext(D96Parser.DeclareContext,0)


        def asnStmt(self):
            return self.getTypedRuleContext(D96Parser.AsnStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(D96Parser.IfStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(D96Parser.ForStmtContext,0)


        def retStmt(self):
            return self.getTypedRuleContext(D96Parser.RetStmtContext,0)


        def callMethod(self):
            return self.getTypedRuleContext(D96Parser.CallMethodContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def scope(self):
            return self.getTypedRuleContext(D96Parser.ScopeContext,0)


        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def DOT(self):
            return self.getToken(D96Parser.DOT, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def exprList(self):
            return self.getTypedRuleContext(D96Parser.ExprListContext,0)


        def CSMEM(self):
            return self.getToken(D96Parser.CSMEM, 0)

        def VID(self):
            return self.getToken(D96Parser.VID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_stmt




    def stmt(self):

        localctx = D96Parser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stmt)
        try:
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.declare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.asnStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.ifStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 150
                self.forStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 151
                self.retStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 152
                self.callMethod()
                self.state = 153
                self.match(D96Parser.SEMI)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 155
                self.scope()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 156
                self.expr(0)
                self.state = 157
                self.match(D96Parser.DOT)
                self.state = 158
                self.match(D96Parser.ID)
                self.state = 159
                self.exprList()
                self.state = 160
                self.match(D96Parser.SEMI)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 162
                self.match(D96Parser.ID)
                self.state = 163
                self.match(D96Parser.CSMEM)
                self.state = 164
                self.match(D96Parser.VID)
                self.state = 165
                self.exprList()
                self.state = 166
                self.match(D96Parser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_(self):
            return self.getToken(D96Parser.VAR_, 0)

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def declBody(self):
            return self.getTypedRuleContext(D96Parser.DeclBodyContext,0)


        def notvalBody(self):
            return self.getTypedRuleContext(D96Parser.NotvalBodyContext,0)


        def VAL_(self):
            return self.getToken(D96Parser.VAL_, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_declare




    def declare(self):
